--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -85,4 +85,4 @@ stages:
               azureSubscription: $(azureServiceConnectionId)
               appName: $(webAppName)
               package: $(Pipeline.Workspace)/drop/$(Build.BuildId).zip             
-              startUpCommand: 'startup.txt'
+              #startUpCommand: 'startup.txt'
