--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -84,5 +84,6 @@ stages:
             inputs:
               azureSubscription: $(azureServiceConnectionId)
               appName: $(webAppName)
-              package: $(Pipeline.Workspace)/drop/$(Build.BuildId).zip             
-              #startUpCommand: 'startup.txt'
+              package: $(Pipeline.Workspace)/drop/$(Build.BuildId).zip     
+              
+              startUpCommand: 'gunicorn --bind=0.0.0.0 --workers=4 startup:app'
